<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/myprimary"
    android:id="@+id/main">

    <!-- App bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <!-- Back button -->
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button_description"
            android:src="@drawable/ic_back"
            android:layout_gravity="start" />

        <!-- App Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/mysecondary"
            android:textSize="40sp"
            android:fontFamily="@font/newsreader_extrabold"
            android:shadowColor="#88000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2" />

        <!-- About button -->
        <ImageButton
            android:id="@+id/about_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/about_button_description"
            android:src="@drawable/ic_about"
            android:layout_gravity="end" />

    </LinearLayout>

    <!-- WebView content -->
    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
