<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Main content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/myprimary"
        android:weightSum="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/myprimary"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <!-- App bar with menu button, title, and about button -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <!-- Menu button -->
            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/menu_button_description"
                android:src="@drawable/ic_menu"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- App Title -->
            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/newsreader_extrabold"
                android:gravity="center"
                android:shadowColor="#88000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/app_name"
                android:textColor="@color/mysecondary"
                android:textSize="40sp"
                app:layout_constraintStart_toEndOf="@id/menu_button"
                app:layout_constraintEnd_toStartOf="@id/about_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                tools:ignore="TextContrastCheck" />

            <!-- About button -->
            <ImageButton
                android:id="@+id/about_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/about_button_description"
                android:src="@drawable/ic_about"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- Progress Bar -->
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:indicatorColor="@color/mysecondary"
            app:trackColor="@color/mysecondary" />

        <!-- Search View -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:queryHint="@string/search_hint"
                android:background="@drawable/search_background"
                android:padding="10dp" />
        </LinearLayout>

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Horizontal Scroll View for category buttons at the bottom -->
        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/myprimary">

                <!-- Category 7 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:id="@id/category7_layout"
                    android:background="@drawable/category_button_background">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_general" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/newsreader_bold"
                        android:gravity="center"
                        android:text="@string/button7_category"
                        android:textColor="@color/mysecondary"
                        android:textSize="20sp" />
                </LinearLayout>

                <!-- Category 1 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:id="@id/category1_layout"
                    android:background="@drawable/category_button_background">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_business" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/newsreader_bold"
                        android:text="@string/button1_category"
                        android:textColor="@color/mysecondary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <!-- Category 2 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:background="@drawable/category_button_background"
                    android:id="@id/category2_layout">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_entertainment" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/newsreader_bold"
                        android:text="@string/button2_category"
                        android:textColor="@color/mysecondary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <!-- Category 3 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:background="@drawable/category_button_background"
                    android:id="@id/category3_layout">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_health" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/newsreader_bold"
                        android:text="@string/button3_category"
                        android:textColor="@color/mysecondary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <!-- Category 4 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:background="@drawable/category_button_background"
                    android:id="@id/category4_layout">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_science" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/newsreader_bold"
                        android:text="@string/button4_category"
                        android:textColor="@color/mysecondary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <!-- Category 5 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:background="@drawable/category_button_background"
                    android:id="@id/category5_layout">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_sports" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/newsreader_bold"
                        android:text="@string/button5_category"
                        android:textColor="@color/mysecondary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <!-- Category 6 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:background="@drawable/category_button_background"
                    android:id="@id/category6_layout">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_technology" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/newsreader_bold"
                        android:text="@string/button6_category"
                        android:textColor="@color/mysecondary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/myprimary"
        app:menu="@menu/menu_navigation"
        app:headerLayout="@layout/nav_header"
        app:itemTextColor="@color/mysecondary"/>
</androidx.drawerlayout.widget.DrawerLayout>
